Bug 53556 - : Formatting and alignment issues with RTF documents
Summary: : Formatting and alignment issues with RTF documents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.4 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:4.2.0 target:4.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-15 20:10 UTC by Sean
Modified: 2013-08-11 19:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Attached is a sample run of the document. (58.78 KB, application/rtf)
2012-08-15 20:10 UTC, Sean
Details
Rendering of the document in Libre under Ubuntu 12.04. (90.50 KB, image/png)
2012-08-15 20:11 UTC, Sean
Details
Screen shot of what it should look like, as Rendered by MS Word 2007 on Windows 7 with a slightly different dataset. (192.65 KB, image/png)
2012-08-15 20:53 UTC, Sean
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sean 2012-08-15 20:10:08 UTC
Created attachment 65613 [details]
Attached is a sample run of the document.

Problem description: 
When opening an RTF generated by a product I work with, the document does not format as expected in Libre Office 3.5.4(and hasn't in any versions since the OO split).  The document opens fine in recent MS Word, so it appears to be validly formated.  

Steps to reproduce:
1. Load the attached sample RTF

Current behavior:
Formatting is completely miss aligned and things are out of place, but all the right content.

Expected behavior:
Formatting should be aligned, and is in MS Word.

Platform (if different from the browser): 
Ubunto 12.04, 64bit
Comment 1 Sean 2012-08-15 20:11:49 UTC
Created attachment 65614 [details]
Rendering of the document in Libre under Ubuntu 12.04.
Comment 2 Sean 2012-08-15 20:53:10 UTC
Created attachment 65616 [details]
Screen shot of what it should look like, as Rendered by MS Word 2007 on Windows 7 with a slightly different dataset.
Comment 3 Urmas 2012-08-18 13:16:25 UTC
Confirmed in 3.6.0.4
Comment 4 Jorendc 2012-08-22 22:42:55 UTC
Reproducable with Mac OSX 10.8; LO 3.6.1.1; Dutch language pack;
Comment 5 Commit Notification 2013-08-09 14:22:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=03f0cbd354646733977e4dec754c0113a5cbc3c9

fdo#53556 RTF import of fFilled shape property for drwainglayer shapes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-08-09 14:22:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f1f7199736e2ae07b34849ba66f61a1ef5782e8

fdo#53556 RTF import: fix handling of default shapeType



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-08-09 14:22:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aa6959ba2c4ef1b718d8249fd47faaf677b16111

fdo#53556 testcase



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Miklos Vajna 2013-08-09 14:35:19 UTC
I saw two problems here:

- a transparent rectangle wasn't transparent, hiding text
- some shapes had text which wasn't wrapped.

Both should be fixed on master with the above commits. -4-1 has a bit more problems, but I'll try to backport what is necessary.
Comment 9 Miklos Vajna 2013-08-09 15:37:09 UTC
-4-1 review: https://gerrit.libreoffice.org/#/c/5328/
Comment 10 Commit Notification 2013-08-11 19:49:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b93ad36d89b16890ba213c9e5e44973591a2d65c&h=libreoffice-4-1

fdo#53556 RTF import: fix visibility and text wrapping issues


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.