fdo#53556 RTF import: fix visibility and text wrapping issues

This is a backport of 6 commits from master:

- the first 3 are earlier fixes on master, without them the test doc
  has only 1 shape imported out of 3 (on master, this was already fine)
- the next 2 are the real fixes
- the last one is the testcase

(cherry picked from commits 9d640dc6ad0f0b58fa62b70f78478e2bc8796e69,
2fc088afdf6dcb2defbd462a9e64ba7e53ba5caf,
4ab658b56f5c6ff0082d38d8ace1924d11e30e96,
03f0cbd354646733977e4dec754c0113a5cbc3c9,
9f1f7199736e2ae07b34849ba66f61a1ef5782e8 and
aa6959ba2c4ef1b718d8249fd47faaf677b16111)

Conflicts:
	sw/qa/extras/rtfimport/rtfimport.cxx
	writerfilter/source/rtftok/rtfdocumentimpl.cxx
	writerfilter/source/rtftok/rtfdocumentimpl.hxx
	writerfilter/source/rtftok/rtfsdrimport.cxx

Change-Id: If58376aec31ab00cab19221beed73e8275a834d2