writerfilter/source/rtftok/rtfsdrimport.hxx
@@ -21,7 +21,9 @@ namespace writerfilter {
                 RTFSdrImport(RTFDocumentImpl& rImport, uno::Reference<lang::XComponent> const& xDstDoc);
                 virtual ~RTFSdrImport();
 
-                void resolve(RTFShape& rShape);
+                void resolve(RTFShape& rShape, bool bClose);
+                void close();
+                void append(OUString aKey, OUString aValue);
                 void resolveDhgt(uno::Reference<beans::XPropertySet> xPropertySet, sal_Int32 nZOrder);
                 void resolveFLine(uno::Reference<beans::XPropertySet> xPropertySet, sal_Int32 nFLine);
                 /**
@@ -32,9 +34,13 @@ namespace writerfilter {
                 std::vector<beans::PropertyValue> getTextFrameDefaults(bool bNew);
             private:
                 void createShape(OUString aService, uno::Reference<drawing::XShape>& xShape, uno::Reference<beans::XPropertySet>& xPropertySet);
+                void applyProperty(uno::Reference<drawing::XShape> xShape, OUString aKey, OUString aValue);
 
                 RTFDocumentImpl& m_rImport;
                 uno::Reference<drawing::XDrawPage> m_xDrawPage;
+                uno::Reference<drawing::XShape> m_xShape;
+                /// If m_xShape is imported as a Writer text frame (instead of a drawinglayer rectangle).
+                bool m_bTextFrame;
         };
     } // namespace rtftok
 } // namespace writerfilter
